AB#1588 Adapt to new development mail server API